# dolphin-switch

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
docs/: architecture.md  emulated-memory.md  jit-memory.md  m1-cmake-prep.md  m3-graphics.md  milestones.md
frontend/: CMakeLists.txt
frontend/src/: debug_log.cpp  debug_log.h  main.cpp  switch_libc_shim.c
patches/: 0008-switch-Externals-SFML-bump-nested-submodule-for-Swit.patch  0010-switch-Externals-curl-bump-nested-submodule-for-sock.patch  README.md
scripts/: build-host.sh  build.sh  deploy-to-switch.sh  docker-build.sh  setup-toolchain.sh
